further fixing Header on iPhone SE

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -14,6 +14,12 @@
   display: flex;
   flex-direction: column;
 
+  button {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
   .action-bar {
     display: flex;
     align-items: center;
